--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -526,6 +526,8 @@
   "cardDetails": {
     "description": "Descrição",
     "upright": "À direita",
-    "reversed": "À esquerda"
+    "reversed": "À esquerda",
+    "hide": "Ocultar detalhes",
+    "show": "Mostrar detalhes"
   }
 }
