add burger button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,6 +17,7 @@
   "navigation": {
     "home": "Home",
     "back": "Back",
+    "menu": "Menu",
     "learn": "Learn",
     "practice": "Practice",
     "about": "About"
