--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -17,6 +17,7 @@
   "navigation": {
     "home": "Accueil",
     "back": "Retour",
+    "menu": "Menu",
     "learn": "Apprendre",
     "practice": "Pratiquer",
     "about": "À propos"
