--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -17,6 +17,7 @@
   "navigation": {
     "home": "Início",
     "back": "Voltar",
+    "menu": "Menu",
     "learn": "Aprender",
     "practice": "Praticar",
     "about": "Sobre"
